fix: fixed layout issue

--- a/src/assets/scss/components/_testament.scss
+++ b/src/assets/scss/components/_testament.scss
@@ -2,8 +2,8 @@
   font-family: 'Times New Roman', Times, serif;
 }
 .testamonytext {
-  margin-right: 25%;
-  margin-left: 25%;
+  margin-right: 29%;
+  margin-left: 29%;
 }
 .textbottomboder {
   height: 2px;
